updated favicon, fixed season rename button overflow issue

--- a/src/static/styles/Season.css
+++ b/src/static/styles/Season.css
@@ -7,15 +7,13 @@
     border-radius: 5px;
 }
 
-.seasonTitle {
-    display: inline-block;
-    margin-right: 10px;
+.seasonTitleRow {
+    margin: 0px 10px;
 }
 
 .nameEditButton {
     display: inline;
     padding: 2px 1px 3px 1px;
-    position: absolute;
     margin-top: 5px;
 }
 
